交换层跑通基本流程